--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Advocacy for Youth Financial Rights</title>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <style>
 body {
   font-family: Arial, sans-serif;
@@ -24,7 +24,7 @@ button {
   cursor: pointer;
 }
 button:hover { background-color: #005bb5; }
-#joinForm {
+#joinForm, #loginForm {
   display: none;
   margin-top: 20px;
   border: 1px solid #ccc;
@@ -39,9 +39,16 @@ input {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-#status {
+#status, #loginStatus {
   margin-top: 15px;
   font-weight: bold;
+}
+#membersArea {
+  display: none;
+  margin-top: 20px;
+  padding: 20px;
+  border: 2px dashed #0073e6;
+  border-radius: 6px;
 }
 </style>
 <script>
@@ -59,8 +66,8 @@ const firebaseConfig = {
   appId: "1:785090560051:web:f3c95d60d8177f36086346",
   measurementId: "G-31LWJC00MT"
 };
-
-const app = firebase.initializeApp(firebaseConfig);
+  
+firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 
 function signup(event) {
@@ -71,12 +78,51 @@ function signup(event) {
 
   auth.createUserWithEmailAndPassword(email, password)
     .then(userCredential => {
-      document.getElementById("status").innerText = 
-        "Welcome, " + username + "! Your account was created.";
+      const user = userCredential.user;
+      user.sendEmailVerification()
+        .then(() => {
+          document.getElementById("status").innerText =
+            "Account created for " + username + ". Check your email to verify before logging in.";
+        })
+        .catch(error => {
+          document.getElementById("status").innerText = "Error sending verification: " + error.message;
+        });
     })
     .catch(error => {
       document.getElementById("status").innerText = error.message;
     });
+}
+
+function login(event) {
+  event.preventDefault();
+  const email = document.getElementById("loginEmail").value;
+  const password = document.getElementById("loginPassword").value;
+
+  auth.signInWithEmailAndPassword(email, password)
+    .then(userCredential => {
+      const user = userCredential.user;
+      if (user.emailVerified) {
+        document.getElementById("loginStatus").innerText =
+          "Welcome back, " + user.email + "!";
+        document.getElementById("logoutBtn").style.display = "block";
+        document.getElementById("membersArea").style.display = "block";
+      } else {
+        document.getElementById("loginStatus").innerText =
+          "Please verify your email before logging in.";
+        auth.signOut();
+      }
+    })
+    .catch(error => {
+      document.getElementById("loginStatus").innerText = error.message;
+    });
+}
+
+function logout() {
+  auth.signOut().then(() => {
+    document.getElementById("loginStatus").innerText = "You have logged out.";
+    document.getElementById("logoutBtn").style.display = "none";
+    document.getElementById("membersArea").style.display = "none";
+  });
 }
 </script>
 </head>
@@ -102,6 +148,25 @@ function signup(event) {
   <p id="status"></p>
 </div>
 
+<div id="loginForm" style="display:block; margin-top:20px;">
+  <h3>Login</h3>
+  <form onsubmit="login(event)">
+    <input type="email" id="loginEmail" placeholder="Email" required>
+    <input type="password" id="loginPassword" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
+  <p id="loginStatus"></p>
+</div>
+
+<button onclick="logout()" id="logoutBtn" style="display:none; margin-top:10px;">Logout</button>
+
+<div id="membersArea">
+  <h3>Members Only</h3>
+  <p>Welcome to the private section. Here you’ll find exclusive updates and resources once you are verified and logged in.</p>
+</div>
+
+<h2>Contact</h2>
+<p>Email us at: yourname@example.com</p>
 
 </body>
 </html>
